[package]
name = "mb_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-halt = "1.0.0"

[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = 'z'