[package]
name = "mb_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
panic-halt = "1.0.0"
log = "0.4.25"

[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = 'z'
